--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,16 +2,20 @@ server:
   port: 26000
 spring:
   profiles:
-    active: dev
+    active: develop
   datasource:
-    url: # your jdbc
-    username: # your username
-    password: # your password
+    url: # 数据库连接地址
+    username: # 数据库连接账户
+    password: # 数据库连接密码
   data:
     redis:
-      host: # your host
-      port: # your port
-      database: # your database
+      host: # redis连接地址
+      port: # redis连接端口
+      database: # redis数据库
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
 knife4j:
   enable: true
   setting:
@@ -33,6 +37,22 @@ cross:
   list:
     - path: /**
       origin:
-        - http://127.0.0.1:5173
+        - http://127.0.0.1:5173 # 跨域地址
         - http://127.0.0.1:5174
         - http://localhost:5173
+        - http://10.205.253.83:5173
+mybatis-flex:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+file:
+  bath-path: /
+  mode: tencent_cloud
+  polices:
+    - access-key: # access-key
+      secret-key: # secret-key
+      endpoint: # 地域
+      bucket: # 存储桶名
+      domain: # 域名，末尾不要有 /
+      redirect-domain: # 重定向地址
+      http-protocol: # 协议 http/https
+      mode: # 存储方式
